--- a/base/en-US.html
+++ b/base/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Basic Static Website Template
         </title>
-        <!-- version "1.5.1.13 build 20180228.204849" -->
+        <!-- version "1.5.1.15 build 20180228.211106" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -75,7 +75,7 @@
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         Products
                                                     </b>
@@ -83,7 +83,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ App
                                                     </b>
@@ -106,7 +106,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
@@ -123,17 +123,17 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Plugin
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Gadget
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         └ Applet
                                                     </b>
@@ -152,11 +152,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html">
-                                        <b>
-                                            Download
-                                        </b>
-                                    </a>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#f8f8f8;color:#398fc8;border:0px;border-radius:0px;height:40px;">
+                                            <b>
+                                                Download
+                                            </b>
+                                            <span class="caret"></span>
+                                        </button>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#337ab7;">
+                                                    <b>
+                                                        Download
+                                                    </b>
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="https://github.com/digitser">
+                                                    ├ GitHub
+                                                </a>
+                                                <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R">
+                                                    ├ Baidu Network Disk
+                                                </a>
+                                                <a target="_blank" href="https://digitser.sourceforge.io/">
+                                                    └ SourceForge
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                                 <li>
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/service.html">
