--- a/base/zh-TW.html
+++ b/base/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             基本靜態網站模闆
         </title>
-        <!-- version "1.5.1.12 build 20180228.204434" -->
+        <!-- version "1.5.1.14 build 20180228.211106" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -75,7 +75,7 @@
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         産品
                                                     </b>
@@ -83,7 +83,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 應用
                                                     </b>
@@ -106,7 +106,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ IDE 集成開發環境
                                                     </b>
@@ -123,17 +123,17 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/plugin/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/gadget/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/gadget/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 小工具
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
@@ -152,11 +152,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html">
-                                        <b>
-                                            下載
-                                        </b>
-                                    </a>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#f8f8f8;color:#398fc8;border:0px;border-radius:0px;height:40px;">
+                                            <b>
+                                                下載
+                                            </b>
+                                            <span class="caret"></span>
+                                        </button>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html" style="color:#337ab7;">
+                                                    <b>
+                                                        下載
+                                                    </b>
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="https://github.com/digitser">
+                                                    ├ GitHub
+                                                </a>
+                                                <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R">
+                                                    ├ 百度網盤
+                                                </a>
+                                                <a target="_blank" href="https://digitser.sourceforge.io/">
+                                                    └ SourceForge
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                                 <li>
                                     <a target="_blank" href="http://dts.digitser.cn/zh-TW/service.html">
