--- a/base/zh-CN/about.html
+++ b/base/zh-CN/about.html
@@ -7,7 +7,7 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.1.15 build 20180228.204723" -->
+        <!-- version "0.9.1.17 build 20180228.211106" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -73,7 +73,7 @@
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         产品
                                                     </b>
@@ -81,7 +81,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 应用
                                                     </b>
@@ -104,7 +104,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ IDE 集成开发环境
                                                     </b>
@@ -121,17 +121,17 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/plugin/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/gadget/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/gadget/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ 小工具
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
@@ -150,11 +150,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html">
-                                        <b>
-                                            下载
-                                        </b>
-                                    </a>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#f8f8f8;color:#398fc8;border:0px;border-radius:0px;height:40px;">
+                                            <b>
+                                                下载
+                                            </b>
+                                            <span class="caret"></span>
+                                        </button>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html" style="color:#337ab7;">
+                                                    <b>
+                                                        下载
+                                                    </b>
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="https://github.com/digitser">
+                                                    ├ GitHub
+                                                </a>
+                                                <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R">
+                                                    ├ 百度网盘
+                                                </a>
+                                                <a target="_blank" href="https://digitser.sourceforge.io/">
+                                                    └ SourceForge
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                                 <li>
                                     <a target="_blank" href="http://dts.digitser.cn/zh-CN/service.html">
