--- a/orange-red/en-US/about.html
+++ b/orange-red/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.1.13 build 20180228.204935" -->
+        <!-- version "0.9.1.15 build 20180228.211106" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -73,7 +73,7 @@
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         Products
                                                     </b>
@@ -81,7 +81,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ App
                                                     </b>
@@ -104,7 +104,7 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
@@ -121,17 +121,17 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Plugin
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         ├ Gadget
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2f7dc5;">
                                                     <b>
                                                         └ Applet
                                                     </b>
@@ -150,11 +150,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#444;">
-                                        <b>
-                                            Download
-                                        </b>
-                                    </a>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#ff552d;color:#398fc8;border:0px;border-radius:3px;height:40px;">
+                                            <b style="color:#444;">
+                                                Download
+                                            </b>
+                                            <span class="caret" style="color:#444;"></span>
+                                        </button>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#2f7dc5;">
+                                                    <b>
+                                                        Download
+                                                    </b>
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="https://github.com/digitser">
+                                                    ├ GitHub
+                                                </a>
+                                                <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R">
+                                                    ├ Baidu Network Disk
+                                                </a>
+                                                <a target="_blank" href="https://digitser.sourceforge.io/">
+                                                    └ SourceForge
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                                 <li>
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/service.html" style="color:#444;">
