--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.5.1.15 build 20180228.211106" -->
+        <!-- version "1.5.1.22 build 20180228.213917" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -26,14 +26,17 @@
     <body class="">
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
-                <div class="row">
+                <div class="row" style="padding-top:12px;padding-bottom:2px;font-size:12px;">
                     <div class="col-md-8">
-                        <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
-                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
+                        <a target="_blank" href="http://www.digitser.cn/" style="color:#655753;">
+                            Portal
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="http://forum.digitser.cn/" style="color:#655753;">
+                            Forum
                         </a>
                     </div>
-                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                    <div class="col-md-4" style="text-align:right;">
                         <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
                             Baidu Network Disk
                         </a>
@@ -44,6 +47,15 @@
                         &nbsp;&nbsp;&nbsp;
                         <a href="##" style="color:#655753;">
                             Sign In
+                        </a>
+                    </div>
+                </div>
+                <hr style="margin:0;border:0;border-top:1px solid #ff967d;">
+                <div class="row" style="padding-top:12px;">
+                    <div class="col-md-2" style="margin-right:0px;padding-right:0px;">
+                        <a target="_blank" href="http://dts.digitser.cn/en-US.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
                         </a>
                     </div>
                 </div>
