--- a/orange-red/index.html
+++ b/orange-red/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             橙红静态网站模板
         </title>
-        <!-- version "1.5.1.18 build 20180228.211106" -->
+        <!-- version "1.5.1.25 build 20180228.213917" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -26,14 +26,17 @@
     <body class="">
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
-                <div class="row">
+                <div class="row" style="padding-top:12px;padding-bottom:2px;font-size:12px;">
                     <div class="col-md-8">
-                        <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
-                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
-                            alt="德云社区 Log" title="点这里进入官网首页">
+                        <a target="_blank" href="http://www.digitser.cn/" style="color:#655753;">
+                            门户
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="http://forum.digitser.cn/" style="color:#655753;">
+                            论坛
                         </a>
                     </div>
-                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                    <div class="col-md-4" style="text-align:right;">
                         <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
                             百度网盘
                         </a>
@@ -44,6 +47,15 @@
                         &nbsp;&nbsp;&nbsp;
                         <a href="##" style="color:#655753;">
                             登录
+                        </a>
+                    </div>
+                </div>
+                <hr style="margin:0;border:0;border-top:1px solid #ff967d;">
+                <div class="row" style="padding-top:12px;">
+                    <div class="col-md-12" style="margin-right:0px;padding-right:0px;">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="德云社区 Log" title="点这里进入官网首页">
                         </a>
                     </div>
                 </div>
