--- a/orange-red/zh-TW/about.html
+++ b/orange-red/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.1.14 build 20180228.211107" -->
+        <!-- version "0.9.1.20 build 20180228.213918" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -24,14 +24,17 @@
     <body class="">
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
-                <div class="row">
+                <div class="row" style="padding-top:12px;padding-bottom:2px;font-size:12px;">
                     <div class="col-md-8">
-                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
-                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
-                            alt="德雲社區 Log" title="點這裏進入官網首頁">
+                        <a target="_blank" href="http://www.digitser.cn/" style="color:#655753;">
+                            門戶
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="http://forum.digitser.cn/" style="color:#655753;">
+                            論壇
                         </a>
                     </div>
-                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                    <div class="col-md-4" style="text-align:right;">
                         <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
                             百度網盤
                         </a>
@@ -42,6 +45,15 @@
                         &nbsp;&nbsp;&nbsp;
                         <a href="##" style="color:#655753;">
                             登錄
+                        </a>
+                    </div>
+                </div>
+                <hr style="margin:0;border:0;border-top:1px solid #ff967d;">
+                <div class="row" style="padding-top:12px;">
+                    <div class="col-md-12" style="margin-right:0px;padding-right:0px;">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="德雲社區 Log" title="點這裏進入官網首頁">
                         </a>
                     </div>
                 </div>
